manifests/employee-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service-dep
  namespace: osaan-dev
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "4004"
    prometheus.io/scheme: http
    prometheus.io/path: "/actuator/prometheus"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-service
          image: miguelsombrero/employee-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 4004
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 4004
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
