manifests/employee-service/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: employee-postgres
  namespace: osaan-dev
spec:
  serviceName: employee-postgres
  replicas: 1
  selector:
    matchLabels:
      app: employee-postgres
  template:
    metadata:
      labels:
        app: employee-postgres
    spec:
      containers:
        - name: osaan-postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: employee-postgres
  namespace: osaan-dev
spec:
  selector:
    app: employee-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
