manifests/employee-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-svc
  namespace: osaan-dev
spec:
  selector:
    app: employee-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
