manifests/employee-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: employee-service-route
  namespace: osaan-dev
  labels:
    app: employee-service
spec:
  to:
    kind: Service
    name: employee-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
